# regulation_rag

./: .gitignore  README.md  baseline.ipynb  bge_rerank.py  doc_parse.py  ensemble_retriever.py  eval.ipynb  iterative_rag.py  main.py  model.py  multi_vector_hypothetical_question.py  multi_vector_parent_child.py  multi_vector_summary.py  pyproject.toml  query_enhance.py  self-rag.excalidraw  self_rag.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
file_load/: bs4_extract_code_from_html.py  bs_html_loader.py  deepdoc_parser.py  docx2txt_word.py  docx_extract_table_from_word.py  fitz_extract_table_from_pdf.py  openpyxl_excel.py  pptx_extract_table_from_ppt.py  pymupdf_loader.py  unstructured_pdf.py  unstructured_ppt.py  web_loader.py
file_load/fixtures/: test.html
file_load/ragflow/: RAGFlow_DeepDOC_PDF_技术原理.md  RAGFlow_DeepDOC_代码架构解析.md  README.md
file_load/ragflow/api/: constants.py  ragflow_server.py  settings.py
file_load/ragflow/api/apps/: __init__.py  api_app.py  canvas_app.py  chunk_app.py  conversation_app.py  dialog_app.py  document_app.py  file2document_app.py  file_app.py  kb_app.py  langfuse_app.py  llm_app.py  plugin_app.py  system_app.py  tenant_app.py  user_app.py
file_load/ragflow/api/apps/sdk/: agent.py  chat.py  dataset.py  dify_retrieval.py  doc.py  session.py
file_load/ragflow/api/db/: db_models.py  db_utils.py  init_data.py
file_load/ragflow/api/db/services/: api_service.py  canvas_service.py  common_service.py  conversation_service.py  dialog_service.py  document_service.py  file2document_service.py  file_service.py  knowledgebase_service.py  langfuse_service.py  llm_service.py  task_service.py  user_canvas_version.py  user_service.py
file_load/ragflow/api/utils/: __init__.py  api_utils.py  commands.py  file_utils.py  t_crypt.py
file_load/ragflow/conf/: ._service_conf.yaml  service_conf.yaml
file_load/ragflow/deepdoc/parser/: __init__.py  docx_parser.py  excel_parser.py  figure_parser.py  html_parser.py  json_parser.py  pdf_parser.py  txt_parser.py  utils.py
file_load/ragflow/deepdoc/parser/resume/: step_two.py
file_load/ragflow/deepdoc/parser/resume/entities/: corporations.py
file_load/ragflow/deepdoc/vision/: __init__.py  layout_recognizer.py  ocr.py  recognizer.py  t_ocr.py  t_recognizer.py  table_structure_recognizer.py
file_load/ragflow/rag/: benchmark.py  prompts.py  raptor.py  settings.py
file_load/ragflow/rag/app/: manual.py  picture.py
file_load/ragflow/rag/llm/: chat_model.py  cv_model.py  embedding_model.py  rerank_model.py  sequence2txt_model.py  tts_model.py
file_load/ragflow/rag/nlp/: __init__.py  query.py  rag_tokenizer.py  synonym.py  term_weight.py
file_load/ragflow/rag/svr/: cache_file_svr.py  task_executor.py
file_load/ragflow/rag/utils/: __init__.py
tests/: test_excel_processing.py  test_pdf_processing.py  test_rag_llm_real.py
