[project]
name = "regulation-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "camelot-py>=1.0.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.33.0",
    "ipykernel>=6.29.5",
    "jpype1>=1.5.2",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pi-heif>=0.22.0",
    "pillow>=11.2.1",
    "ragas>=0.2.15",
    "sentence-transformers>=4.1.0",
]
