[project]
name = "regulation-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.33.0",
    "ipykernel>=6.29.5",
    "jpype1>=1.5.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-unstructured>=0.1.6",
    "lxml>=5.4.0",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pi-heif>=0.22.0",
    "pillow>=11.2.1",
    "pymupdf>=1.26.1",
    "ragas>=0.2.15",
    "sentence-transformers>=4.1.0",
    "unstructured[pdf]>=0.17.2",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
    "python-pptx>=1.0.2",
    "docx2txt>=0.9",
    "python-docx>=1.1.2",
    "beartype>=0.21.0",
    "strenum>=0.4.15",
    "pycryptodome>=3.23.0",
    "ruamel-yaml>=0.18.14",
    "pycryptodomex>=3.23.0",
    "datrie>=0.8.2",
    "hanziconv>=0.3.2",
    "roman-numbers>=1.0.2",
    "word2number>=1.1",
    "cn2an>=0.5.23",
    "trio>=0.30.0",
    "xgboost>=3.0.2",
    "readability>=0.3.2",
    "html-text>=0.7.0",
    "elasticsearch==7.17.9",
    "elasticsearch-dsl==7.4.1",
    "elastic-transport>=8.17.1",
    "minio>=7.2.15",
    "shapely>=2.1.1",
    "numpy>=2.3.0",
    "pyclipper>=1.3.0.post6",
    "peewee>=3.18.1",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "tika>=3.1.0",
    "langfuse>=3.0.2",
    "pydantic>=2.11.7",
    "yarl>=1.20.1",
    "zhipuai>=2.1.5.20250611",
    "ollama>=0.5.1",
    "dashscope>=1.23.4",
    "json-repair>=0.46.2",
    "google-generativeai>=0.8.5",
    "ormsgpack>=1.10.0",
]
